--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
   <link rel="shortcut icon" href="images/a-kal%c4%b1p-favicon.ico?4024393485"/>
   <title>enszgr</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?502631964"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?3986540858" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?3126398"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?377205381" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
 </script>
   <!-- JS includes -->
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/Sjqp9UDjGPTvmgoQXqvb0JHdA1TyJjWqFDiin2_gcJjfecCJGvjrIK6Uw2JX52MDWhJhjQMujAwuwRjtwD4qFh9kFRBqjDgK52MuZc9DZQw3eyi8d1FEZaJ0jhNlOfG0ZAoDpcikOcFzdPJHdWmDZAvlShB0SkG4fFwVIMMjMPMgP6sFiWF8qMYq10fXgb.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/2tSL8bBOs6HFz5Dx7tZf4GtlFmdowaJHQSKYIppDmL3fecCJGvjrIK6Uw2JX52MDWhJhjQMujAwuwRjtwD4qFh9kFRBqjDgK52MuZc9DZQw3eyi8d1FEZaJ0jhNlOfG0ZAoDpcikOcFzdPJHdWmDZAvlShB0SkG4fFwVIMMjMPMgP6sFiWF8qMY91rfXgb.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -85,7 +85,7 @@
      <div class="clearfix grpelem" id="ppu732"><!-- column -->
       <div class="clearfix colelem" id="pu732"><!-- group -->
        <a class="nonblock nontext clip_frame grpelem" id="u732" href="ens.html"><!-- image --><img class="block" id="u732_img" src="images/ens_neo.gif" data-hidpi-src="images/ens_neo_2x.gif" alt="" width="90" height="90"/></a>
-       <div class="Button shadow rounded-corners grpelem" id="buttonu4121"><!-- container box --></div>
+       <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu4121" href="vakitler--icon-set.html"><!-- container box --></a>
       </div>
       <a class="nonblock nontext Button shadow rounded-corners colelem" id="buttonu4050" href="major-marquis--wallpaper.html"><!-- container box --></a>
      </div>
@@ -170,7 +170,6 @@
   </div>
   <div class="preload_images">
    <img class="preload" src="images/vakit_2.jpg" alt=""/>
-   <img class="preload" src="images/vakit_1.jpg" alt=""/>
    <img class="preload" src="images/major_2.jpg" alt=""/>
    <img class="preload" src="images/major_2_2x.jpg" alt=""/>
    <img class="preload" src="images/login_2.jpg" alt=""/>
@@ -233,7 +232,6 @@
    <img class="preload" src="images/1_2x.png" alt=""/>
    <!--[if lt IE 9]>
    <img class="preload" src="url("images/vakit_2-iebuttonu4121-r-fr.png")" alt=""/>
-   <img class="preload" src="url("images/vakit_1-iebuttonu4121-fr.png")" alt=""/>
    <img class="preload" src="url("images/login_2-iebuttonu4092-r-fr.png")" alt=""/>
    <img class="preload" src="url("images/twitter_app2-iebuttonu3962-r-fr.png")" alt=""/>
    <img class="preload" src="url("images/slack_2-iebuttonu1717-r-fr.png")" alt=""/>
