--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
   <title>enszgr</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?502631964"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?3910133926" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?58216150" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
 </script>
   <!-- JS includes -->
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/4eR25dCX_D9Bg2lwf65fwNPPjlHqb4904l5lOVWfwkIfecCJGvjrIK6Uw2JX52MDWhJhjQMujAwuwRjtwD4qFh9kFRBqjDgK52MuZc9DZQw3eyi8d1FEZaJ0jhNlOfG0ZAoDpcikOcFzdPJHdWmDZAvlShB0SkG4fFwVIMMjMPMgP6sFiWF8qMePkrcXgb.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/58vlBhOAUaPYccWSR1iM7o2vLxHoEK-6J0iaWupQHr9fecCJGvjrIK6Uw2JX52MDWhJhjQMujAwuwRjtwD4qFh9kFRBqjDgK52MuZc9DZQw3eyi8d1FEZaJ0jhNlOfG0ZAoDpcikOcFzdPJHdWmDZAvlShB0SkG4fFwVIMMjMPMgP6sFiWF8qMeZu5cXgb.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -172,7 +172,8 @@
    <img class="preload" src="images/vakit_2.jpg" alt=""/>
    <img class="preload" src="images/major_2.jpg" alt=""/>
    <img class="preload" src="images/major_2_2x.jpg" alt=""/>
-   <img class="preload" src="images/login_2.jpg" alt=""/>
+   <img class="preload" src="images/login_3.jpg" alt=""/>
+   <img class="preload" src="images/login_3_2x.jpg" alt=""/>
    <img class="preload" src="images/starlord2.jpg" alt=""/>
    <img class="preload" src="images/starlord2_2x.jpg" alt=""/>
    <img class="preload" src="images/twitter_app2.jpg" alt=""/>
@@ -232,7 +233,8 @@
    <img class="preload" src="images/1_2x.png" alt=""/>
    <!--[if lt IE 9]>
    <img class="preload" src="url("images/vakit_2-iebuttonu4121-r-fr.png")" alt=""/>
-   <img class="preload" src="url("images/login_2-iebuttonu4092-r-fr.png")" alt=""/>
+   <img class="preload" src="url("images/login_3-iebuttonu4092-r-fr.png")" alt=""/>
+   <img class="preload" src="url("images/login_3-iebuttonu4092-r-fr2.png")" alt=""/>
    <img class="preload" src="url("images/twitter_app2-iebuttonu3962-r-fr.png")" alt=""/>
    <img class="preload" src="url("images/slack_2-iebuttonu1717-r-fr.png")" alt=""/>
    <img class="preload" src="url("images/follow-iebuttonu1608-r-fr.png")" alt=""/>
