--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <link rel="shortcut icon" href="images/a-kal%c4%b1p-favicon.ico?crc=523158836"/>
   <title>enszgr</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=53182727"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4064836032" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=310485692"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4211146426" id="pagesheet"/>
   <!-- JS includes -->
-  <script src="https://use.typekit.net/ik/VKsJVUf_ztWLt3Ty1WAjrBHmSgpQF4BhPCR4jj8ZzPjfe1SJGvjrIK6Uw2JX52MDWDJ3FDs8ZeF85QS35AmRjcboFAmyjc93jRbuZQ9kF2ZKeKw7Ocm0Sko0-Ao7jPU8d1w0dc80-cICiaiaOcm0Sko0-Ao7jPJHdWmDZAvlShB0SkG4fFwVIMMjMPMgP6sFiWF8qMexvnxBgb.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/7Gq5FkPvtadJgtH1aQgp7TnK2iBfjWf7IVcwbLJzAlqfe1SJGvjrIK6Uw2JX52MDWDJ3FDs8ZeF85QS35AmRjcboFAmyjc93jRbuZQ9kF2ZKeKw7Ocm0Sko0-Ao7jPU8d1w0dc80-cICiaiaOcm0Sko0-Ao7jPJHdWmDZAvlShB0SkG4fFwVIMMjMPMgP6sFiWF8qMYXorzBgb.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -42,30 +42,33 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
     <div class="clearfix colelem" id="pu4713"><!-- group -->
      <a class="nonblock nontext clip_frame grpelem" id="u4713" href="ens.html"><!-- image --><img class="block" id="u4713_img" src="images/ens_neo.gif?crc=337795419" data-hidpi-src="images/ens_neo_2x.gif?crc=337795419" alt="" width="102" height="102"/></a>
+     <a class="nonblock nontext Button transition shadow museBGSize rounded-corners grpelem" id="buttonu8432" href="hills.html"><!-- container box --></a>
+    </div>
+    <div class="clearfix colelem" id="pbuttonu8143"><!-- group -->
      <a class="nonblock nontext Button transition shadow museBGSize rounded-corners grpelem" id="buttonu8143" href="is_it_luke.html"><!-- container box --></a>
-    </div>
-    <div class="clearfix colelem" id="pbuttonu8085"><!-- group -->
      <a class="nonblock nontext Button transition shadow museBGSize rounded-corners grpelem" id="buttonu8085" href="dunes.html"><!-- container box --></a>
+    </div>
+    <div class="clearfix colelem" id="pbuttonu8031"><!-- group -->
      <a class="nonblock nontext Button transition shadow museBGSize rounded-corners grpelem" id="buttonu8031" href="good-evening.html"><!-- container box --></a>
-    </div>
-    <div class="clearfix colelem" id="pbuttonu7984"><!-- group -->
      <a class="nonblock nontext Button transition shadow museBGSize rounded-corners grpelem" id="buttonu7984" href="plusses.html"><!-- container box --></a>
+    </div>
+    <div class="clearfix colelem" id="pbuttonu7705"><!-- group -->
      <a class="nonblock nontext Button transition shadow museBGSize rounded-corners grpelem" id="buttonu7705" href="zownloader.html"><!-- container box --></a>
-    </div>
-    <div class="clearfix colelem" id="pbuttonu6954"><!-- group -->
      <a class="nonblock nontext Button transition shadow museBGSize rounded-corners grpelem" id="buttonu6954" href="lul.html"><!-- container box --></a>
-     <a class="nonblock nontext Button transition shadow museBGSize rounded-corners grpelem" id="buttonu5860" href="dots.html"><!-- container box --></a>
     </div>
-    <div class="clearfix colelem" id="pbuttonu5929"><!-- group -->
+    <div class="clearfix colelem" id="pbuttonu5860"><!-- group -->
+     <a class="nonblock nontext Button transition shadow museBGSize rounded-corners grpelem" id="buttonu5860" href="dots.html"><!-- container box --></a>
      <a class="nonblock nontext Button transition shadow museBGSize rounded-corners grpelem" id="buttonu5929" href="whatsapp.html"><!-- container box --></a>
+    </div>
+    <div class="clearfix colelem" id="pbuttonu4871"><!-- group -->
      <a class="nonblock nontext Button transition shadow museBGSize rounded-corners grpelem" id="buttonu4871" href="brain.html"><!-- container box --></a>
      <a class="nonblock nontext Button transition shadow museBGSize rounded-corners grpelem" id="buttonu4121" href="vakitler.html"><!-- container box --></a>
-    </div>
-    <div class="clearfix colelem" id="pbuttonu4092"><!-- group -->
      <a class="nonblock nontext Button transition shadow museBGSize rounded-corners grpelem" id="buttonu4092" href="login-concept.html"><!-- container box --></a>
-     <a class="nonblock nontext Button transition shadow museBGSize rounded-corners grpelem" id="buttonu4769" href="montreal.html"><!-- container box --></a>
     </div>
-    <a class="nonblock nontext Button transition shadow museBGSize rounded-corners colelem" id="buttonu4659" href="deadmilk.html"><!-- container box --></a>
+    <div class="clearfix colelem" id="pbuttonu4769"><!-- group -->
+     <a class="nonblock nontext Button transition shadow museBGSize rounded-corners grpelem" id="buttonu4769" href="montreal.html"><!-- container box --></a>
+     <a class="nonblock nontext Button transition shadow museBGSize rounded-corners grpelem" id="buttonu4659" href="deadmilk.html"><!-- container box --></a>
+    </div>
     <div class="clearfix colelem" id="pbuttonu4050"><!-- group -->
      <a class="nonblock nontext Button transition shadow museBGSize rounded-corners grpelem" id="buttonu4050" href="major.html"><!-- container box --></a>
      <a class="nonblock nontext Button transition shadow museBGSize rounded-corners grpelem" id="buttonu4000" href="star-lord.html"><!-- container box --></a>
@@ -145,6 +148,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    </div>
   </div>
   <div class="preload_images">
+   <img class="preload" src="images/hills_2.jpg?crc=187852410" alt=""/>
+   <img class="preload" src="images/hills_2_2x.jpg?crc=42146343" alt=""/>
    <img class="preload" src="images/last_jedi_2.jpg?crc=342624755" alt=""/>
    <img class="preload" src="images/last_jedi_2_2x.jpg?crc=131837054" alt=""/>
    <img class="preload" src="images/dunes_2.jpg?crc=460378200" alt=""/>
